# automaton-auditor

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
audit/langsmith_logs/: trace_link.txt
audit/report_bypeer_received/: sample_received_report.md
audit/report_onpeer_generated/: audit_report_20260227_1938.md  audit_report_20260228_0513.md  audit_report_20260228_0547.md  audit_report_v3_20260228.md
audit/report_onself_generated/: audit_report_20260227_2013.md  audit_report_20260228_0630.md  audit_report_v3_20260228.md
rubric/: week2_rubric.json
scripts/: validate_reports.py
src/: graph.py  rubric_ids.py  state.py
src/nodes/: aggregator.py  detectives.py  error_handler.py  executor.py  judge_repair.py  judges.py  justice.py  planner.py  reflector.py  skip.py
src/tools/: repo_tools.py  rubric_utils.py
tests/: test_graph_smoke.py  test_judges_sanitizer.py
